test/invalid/KeywordsCapitalLetterThen/KeywordsCapitalLetterThen.plume
/**
 * Keyword com letra maiuscula: then
 *
 * @author 37059, Rita Henriques
 * @version $Id: KeywordsCapitalLetterThen.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class KeywordsCapitalLetterThen extends Object is
 
  method main : () -> String is
		getTempo(1).toString()

  method getTempo : (tempo : Integer) -> String is
		if tempo == 0
		Then "Sol"
		else "Chuva"

